--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
     <!-- New-Tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <!-- Posted-Tweet CSS -->
+    <link rel="stylesheet" href="/styles/posted-tweet.css" type="text/css" />
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -46,6 +49,21 @@
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+      </section>
+      <section id="tweet-container">
+        <article>
+          <header>
+            <img src="https://openclipart.org/image/300px/svg_to_png/215819/Linux-Avatar.png">
+            <handle> @Mr.Famous </handle>
+          Somebody_Famous
+          </header>
+          <main>
+
+          This is a tweet posted by Somebody_Famous. They probably don't know what they are talking about.
+
+          </main>
+          <footer> 10 days ago </footer>
+        </article>
       </section>
     </main>
 
