--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <!-- Roboto Condensed Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
@@ -50,19 +53,27 @@
           <span class="counter">140</span>
         </form>
       </section>
+
       <section id="tweet-container">
-        <article>
+        <article class="tweet">
+
           <header>
-            <img src="https://openclipart.org/image/300px/svg_to_png/215819/Linux-Avatar.png">
+            <img class="avatar" src="https://openclipart.org/image/300px/svg_to_png/215819/Linux-Avatar.png">
             <handle> @Mr.Famous </handle>
-          Somebody_Famous
+            <p> Somebody_Famous <p>
           </header>
-          <main>
 
+          <main class="content">
           This is a tweet posted by Somebody_Famous. They probably don't know what they are talking about.
-
           </main>
-          <footer> 10 days ago </footer>
+
+          <footer>
+            <p class="date-created">10 days ago</p>
+            <p class="social">
+              <i class="fas fa-heart"></i><i class="fas fa-retweet"></i><i class="fas fa-flag"></i>
+            </p>
+          </footer>
+
         </article>
       </section>
     </main>
