submitted form using jQuery

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets">
+        <form id="tweet-form" method="POST" action="/tweets">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
@@ -55,7 +55,7 @@
       </section>
 
       <section id="tweet-container">
-        <article class="tweet">
+        <!-- <article class="tweet">
 
           <header>
             <img class="avatar" src="https://openclipart.org/image/300px/svg_to_png/215819/Linux-Avatar.png">
@@ -74,7 +74,7 @@
             </p>
           </footer>
 
-        </article>
+        </article> -->
       </section>
     </main>
 
