--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <!-- Posted-Tweet CSS -->
     <link rel="stylesheet" href="/styles/posted-tweet.css" type="text/css" />
 
-    <!-- External JS -->
+    <!-- External JS jQuery -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
@@ -34,6 +34,9 @@
     <!-- Character Counter -->
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
 
+    <!-- Moment JS -->
+    <script type="text/javascript" src="/vendor/moment.js"></script>
+
   </head>
 
   <body>
@@ -41,6 +44,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button><i class="fas fa-edit"></i></button>
     </nav>
 
     <!-- Page-specific (main) content here -->
