--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
-      <button><i class="fas fa-edit"></i></button>
+      <button class="compose-btn"><p class="fas fa-edit"></p><p class="word">Compose</p></button>
     </nav>
 
     <!-- Page-specific (main) content here -->
