fixed duplicate bug, added clear text functionafter submission, seeded the tweeter db using mongoDB

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <div class="error"></div>
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="tweet-form" method="POST" action="/tweets">
