eliminated outline of focused areas, and added code to ensure counter resets to 140 after a post has been made

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       <button class="compose-btn"><p class="fas fa-edit"></p><p class="word">Compose</p></button>
     </nav>
 
-    <!-- Page-specific (main) content here -->
+    <!-- Container to write tweets -->
     <main class="container">
       <div class="error"></div>
       <section class="new-tweet">
@@ -59,28 +59,10 @@
         </form>
       </section>
 
+      <!-- Structure for posted tweets. Refer to jQuery in app.js -->
       <section id="tweet-container">
-        <!-- <article class="tweet">
-
-          <header>
-            <img class="avatar" src="https://openclipart.org/image/300px/svg_to_png/215819/Linux-Avatar.png">
-            <handle> @Mr.Famous </handle>
-            <p> Somebody_Famous <p>
-          </header>
-
-          <main class="content">
-          This is a tweet posted by Somebody_Famous. They probably don't know what they are talking about.
-          </main>
-
-          <footer>
-            <p class="date-created">10 days ago</p>
-            <p class="social">
-              <i class="fas fa-heart"></i><i class="fas fa-retweet"></i><i class="fas fa-flag"></i>
-            </p>
-          </footer>
-
-        </article> -->
       </section>
+
     </main>
 
   </body>
